# dk_py

./: README.md  pyproject.toml
dkpy/extensions/: pydantic_ext.py  test_pydantic_ext.py
