[tool.poetry]
name = "dkpy"
version = "0.1.0"
description = ""
authors = ["Gerson Gallo <ggallovalle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
